--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joy-treasury",
   "description": "A CLI to clone Joy UI blocks into your project.",
   "author": "siriwatknp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://siriwatknp.github.io/joy-treasury/",
   "license": "MIT",
   "publishConfig": {
@@ -22,6 +22,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
+    "test": "jest",
     "typecheck": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -54,11 +55,15 @@
     "@storybook/addons": "7.0.27",
     "@storybook/react": "7.0.27",
     "@storybook/react-webpack5": "7.0.27",
+    "@types/jest": "29.5.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "babel-loader": "9.1.3",
+    "jest": "29.6.1",
     "storybook": "7.0.27",
     "storybook-dark-mode": "3.0.0",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
     "tslib": "2.6.0",
     "tsup": "7.1.0",
     "typescript": "5.1.6"
