--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "new:block": "cd .hygen && hygen block new"
   },
   "dependencies": {
     "@types/got": "9.6.11",
@@ -59,6 +60,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "babel-loader": "9.1.3",
+    "hygen": "6.2.11",
     "jest": "29.6.1",
     "storybook": "7.0.27",
     "storybook-dark-mode": "3.0.0",
