--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cosmiconfig": "8.2.0",
     "cpy": "8.1.1",
     "got": "11.8.2",
+    "react-ga4": "2.1.0",
     "rimraf": "3.0.2",
     "tar": "6.1.0",
     "update-check": "1.5.4"
