--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "build-storybook": "storybook build",
     "new-block": "cd .hygen && hygen block new"
   },
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  },
   "dependencies": {
     "@types/got": "9.6.11",
     "@types/rimraf": "3.0.0",
@@ -51,25 +54,29 @@
     "@emotion/styled": "11.11.0",
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@mui/joy": "5.0.0-beta.0",
-    "@storybook/addon-essentials": "7.0.27",
+    "@storybook/addon-essentials": "7.2.3",
     "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-links": "7.0.27",
-    "@storybook/addon-styling": "1.3.4",
-    "@storybook/addons": "7.0.27",
-    "@storybook/react": "7.0.27",
-    "@storybook/react-webpack5": "7.0.27",
+    "@storybook/addon-links": "7.2.3",
+    "@storybook/addon-mdx-gfm": "7.2.3",
+    "@storybook/addon-styling": "1.3.6",
+    "@storybook/addons": "7.2.3",
+    "@storybook/react": "7.2.3",
+    "@storybook/react-webpack5": "7.2.3",
     "@types/jest": "29.5.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "babel-loader": "9.1.3",
     "hygen": "6.2.11",
     "jest": "29.6.1",
-    "storybook": "7.0.27",
-    "storybook-dark-mode": "3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "storybook": "7.2.3",
+    "storybook-dark-mode": "3.0.1",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "tslib": "2.6.0",
     "tsup": "7.1.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "usehooks-ts": "2.9.1"
   }
 }
