--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "babel-loader": "9.1.3",
+    "chromatic": "6.24.1",
     "hygen": "6.2.11",
     "jest": "29.6.1",
     "react": "18.2.0",
