--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/rimraf": "3.0.0",
     "@types/tar": "4.0.4",
     "chalk": "4.1.0",
+    "cmdk": "0.2.0",
     "commander": "7.1.0",
     "cosmiconfig": "8.2.0",
     "cpy": "8.1.1",
