update pipeline to add pr comment

--- a/.github/workflows/pr-ui-check.yml
+++ b/.github/workflows/pr-ui-check.yml
@@ -2,12 +2,11 @@ name: Pull Request UI Check
 
 on: pull_request
 
-permissions:
-  contents: write
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
         with:
@@ -32,3 +31,12 @@ jobs:
           storybookBuildDir: storybook-static
           exitZeroOnChanges: true # 👈 Option to prevent the workflow from failing
           skip: "@(renovate/**|dependabot/**)"
+
+      - name: Publish Summary
+        run: echo -e "| Results |  |\n| --- | --- |\n| Build Results | ${{steps.chromatic.outputs.buildUrl}} |\n| Storybook Preview | ${{steps.chromatic.outputs.storybookUrl}} |\n| Component Count | ${{steps.chromatic.outputs.componentCount}} |" >> $GITHUB_STEP_SUMMARY
+
+      - name: Add PR Comment
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            | Results |  |\n| --- | --- |\n| Build Results | ${{steps.chromatic.outputs.buildUrl}} |\n| Storybook Preview | ${{steps.chromatic.outputs.storybookUrl}} |\n| Component Count | ${{steps.chromatic.outputs.componentCount}} |
