--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cosmiconfig": "8.2.0",
     "cpy": "8.1.1",
     "got": "11.8.2",
+    "react-dropzone": "^14.2.3",
     "react-ga4": "2.1.0",
     "rimraf": "3.0.2",
     "tar": "6.1.0",
